# HOTV-SeriesU4

./: OpenSource.html  README.md  bsdiff_patch.rar  cjson.rar  libchewing.txt  libusb.txt  mesa.txt  nghttp2.rar  openssl.rar  pye.txt  websocket.txt  yasm.txt
oss/: modules-hl1.jam  modules-hl2.jam  x
oss/boost/1.54/: jamfile  makefile  readme.loewe
oss/boost/1.54/arm-linux-checked-lib/: libboost_atomic.so.1.54.0  libboost_chrono.so.1.54.0  libboost_date_time.so.1.54.0  libboost_filesystem.so.1.54.0  libboost_graph.so.1.54.0  libboost_locale.so.1.54.0  libboost_log.so.1.54.0  libboost_log_setup.so.1.54.0  libboost_math_c99.so.1.54.0  libboost_math_c99f.so.1.54.0  libboost_math_c99l.so.1.54.0  libboost_math_tr1.so.1.54.0  libboost_math_tr1f.so.1.54.0  libboost_math_tr1l.so.1.54.0  libboost_prg_exec_monitor.so.1.54.0  libboost_program_options.so.1.54.0  libboost_random.so.1.54.0  libboost_regex.so.1.54.0  libboost_serialization.so.1.54.0  libboost_signals.so.1.54.0  libboost_system.so.1.54.0  libboost_thread.so.1.54.0  libboost_timer.so.1.54.0  libboost_unit_test_framework.so.1.54.0  libboost_wave.so.1.54.0  libboost_wserialization.so.1.54.0
oss/boost/1.54/arm-linux-lib.hisi/: libboost_atomic.so.1.54.0  libboost_chrono.so.1.54.0  libboost_context.so.1.54.0  libboost_date_time.so.1.54.0  libboost_filesystem.so.1.54.0  libboost_graph.so.1.54.0  libboost_iostreams.so.1.54.0  libboost_locale.so.1.54.0  libboost_log.so.1.54.0  libboost_log_setup.so.1.54.0  libboost_math_c99.so.1.54.0  libboost_math_c99f.so.1.54.0  libboost_math_c99l.so.1.54.0  libboost_math_tr1.so.1.54.0  libboost_math_tr1f.so.1.54.0  libboost_math_tr1l.so.1.54.0  libboost_prg_exec_monitor.so.1.54.0  libboost_program_options.so.1.54.0  libboost_random.so.1.54.0  libboost_regex.so.1.54.0  libboost_serialization.so.1.54.0  libboost_signals.so.1.54.0  libboost_system.so.1.54.0  libboost_thread.so.1.54.0  libboost_timer.so.1.54.0  libboost_unit_test_framework.so.1.54.0  libboost_wave.so.1.54.0  libboost_wserialization.so.1.54.0  libboost_zlib.so.1.54.0
oss/boost/1.54/arm-linux-lib.mstar/: libboost_atomic.so.1.54.0  libboost_chrono.so.1.54.0  libboost_context.so.1.54.0  libboost_date_time.so.1.54.0  libboost_filesystem.so.1.54.0  libboost_graph.so.1.54.0  libboost_iostreams.so.1.54.0  libboost_math_c99.so.1.54.0  libboost_math_c99f.so.1.54.0  libboost_math_c99l.so.1.54.0  libboost_prg_exec_monitor.so.1.54.0  libboost_program_options.so.1.54.0  libboost_python.so.1.54.0  libboost_random.so.1.54.0  libboost_signals.so.1.54.0  libboost_system.so.1.54.0  libboost_thread.so.1.54.0  libboost_timer.so.1.54.0  libboost_wserialization.so.1.54.0
oss/boost/1.54/i686-linux-lib/: libboost_atomic.so.1.54.0  libboost_context.so.1.54.0  libboost_graph.so.1.54.0  libboost_locale.so.1.54.0  libboost_log.so.1.54.0  libboost_log_setup.so.1.54.0  libboost_prg_exec_monitor.so.1.54.0  libboost_random.so.1.54.0  libboost_signals.so.1.54.0  libboost_unit_test_framework.so.1.54.0  libboost_wave.so.1.54.0
oss/boost/1.54/sh4-linux-lib/: libboost_atomic.so.1.54.0  libboost_chrono.so.1.54.0  libboost_date_time.so.1.54.0  libboost_filesystem.so.1.54.0  libboost_graph.so.1.54.0  libboost_iostreams.so.1.54.0  libboost_math_c99.so.1.54.0  libboost_math_c99f.so.1.54.0  libboost_math_c99l.so.1.54.0  libboost_prg_exec_monitor.so.1.54.0  libboost_random.so.1.54.0  libboost_signals.so.1.54.0  libboost_system.so.1.54.0  libboost_thread.so.1.54.0  libboost_timer.so.1.54.0  libboost_wserialization.so.1.54.0
oss/boost/1.54/x86_64-linux-lib/: libboost_atomic.so.1.54.0  libboost_chrono.so.1.54.0  libboost_context.so.1.54.0  libboost_date_time.so.1.54.0  libboost_filesystem.so.1.54.0  libboost_graph.so.1.54.0  libboost_iostreams.so.1.54.0  libboost_math_c99.so.1.54.0  libboost_math_c99f.so.1.54.0  libboost_math_c99l.so.1.54.0  libboost_prg_exec_monitor.so.1.54.0  libboost_random.so.1.54.0  libboost_signals.so.1.54.0  libboost_system.so.1.54.0  libboost_thread.so.1.54.0  libboost_timer.so.1.54.0  libboost_wserialization.so.1.54.0
oss/bsa/: jamfile
oss/bsa/arm-linux-bin/: btmw-test  btut
oss/bsa/bluetooth/: bt_stack.conf
oss/bsa/include/inc/: c_bt_mw_a2dp_common.h  c_bt_mw_a2dp_src.h  c_bt_mw_avrcp.h  c_bt_mw_gap.h  c_bt_mw_gatt.h  c_bt_mw_hidh.h  c_bt_mw_manager.h  c_bt_mw_spp.h  u_bluetooth.h  u_bt_mw_avrcp.h  u_bt_mw_common.h  u_bt_mw_gatt.h  u_bt_mw_types.h
oss/bsd2/msinttypes/r26/: jamfile  makefile
oss/bsd2/wpa_supplicant/cfg80211/: jamfile
oss/bsd2/wpa_supplicant_bcm43569/: jamfile
oss/bsd2/wpa_supplicant_bcm43569/arm-linux-bin/: hostapd
oss/cutest/1.4/cutest/: jamfile  makefile
oss/duma/2.5.15/: makefile
oss/duma/2.5.15/duma_2_5_15/: GNUmakefile  duma.h  duma_config.h  print.c  testmt.c
oss/freetype/freetype-2.4.2/: jamfile  makefile  makelib.sh
oss/gpl/avh-ipv4ll/: jamfile  makefile
oss/gpl/avh-ipv4ll/resource/: AVH-IPv4LL_org.c  script
oss/gpl/avh-ipv4ll/src/: avh-ipv4ll.c
oss/gpl/fuse-ext2/0.0.7/: jamfile
oss/gpl/fuse/2.9.3/: jamfile
oss/gpl/gphoto2/2.4.10/: jamfile  makefile
oss/gpl/gphotofs/0.4.0/: jamfile  makefile
oss/gpl/gphotofs/0.5.0/: jamfile
oss/gpl/htop/1.0.1/: jamfile  makefile
oss/gpl/libltdl/1.5.10-1/: jamfile  makefile
oss/lgpl/sbc/: jamfile
oss/libjpeg/8d/: jamfile  makefile
oss/libpng/1.5/: jamfile  makefile
oss/libpng/1.5.17/: jamfile
oss/misc/cJSON/: jamfile
oss/misc/mali/: Makefile
oss/misc/origin/: jamfile
oss/mit/giflib/: jamfile  makefile
oss/skia/depot_tools/: search_toolchain
oss/skia/lib/: libfontconfig.so.1
oss/skia/skia/: BUILD.gn  list
oss/skia/skia/gn/: BUILD.gn  search_neon
oss/skia/skia/gn/toolchain/: BUILD.gn
oss/skia/skia/tools/bookmaker/: mdOut.cpp
xml2/lib.mstar/: libavdevice.so.56  libavfilter.so.5.40.101  libavformat.so.56  libavutil.so.54.31.100  libcares.so.2.1.0  libcurl.so.4  libdbus-1.la  libdbus-1.so.3.14.3  libexpat.so.1  libmp3lame.so.0  libnghttp2.la  libnghttp2.so.14.15.1  libpng.so.3  libswresample.so.1.2.101  libtheoradec.so.1.1.4  libtheoraenc.so.1.1.2  libunwind.so.8.0.1  libusb-0.1.so.4  libusb-1.0.so.0
(+1279 files in other folders)
